# financial_stack_engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  RELEASES.md  SETUP.md  append_noob_mode.sh  build_tests.py  build_wiki.py  compressed_codebase.txt  fix_ledger_bloat.py  infra_tui.py  quickstart.py  readme.md  requirements.txt  run_gauntlet.py  run_web.sh  setup.sh  start_firm.sh
config/: system.yaml
cpp/: CMakeLists.txt
cpp/include/quantcore/: data_engine.h  event_bus.h  feature_engine.h  risk_engine.h  types.h
cpp/src/: bindings.cpp  data_engine.cpp  event_bus.cpp  feature_engine.cpp  risk_engine.cpp
data/: alpha_health.json  alpha_history.json  alpha_signals.json  analytics.db  analytics.db.wal  hivemind_ui.json  nexus_live.json  paper_broker.duckdb.wal  satellite_feed.json  stat_arb_ui.json  surveillance_halt.flag  time_machine_report.json
data/raw/equities/: AAPL.parquet  AVGO.parquet  BTC-USD.parquet  ETH-USD.parquet  GOOGL.parquet  INTC.parquet  META.parquet  MSFT.parquet  MU.parquet  NVDA.parquet  SNDK.parquet  SPCX.parquet  TSM.parquet
data_cache/: BTC-USD_ETH-USD.pkl  GLD_BTC-USD.pkl  GLD_ETH-USD.pkl  GLD_IAU.pkl  IAU_BTC-USD.pkl  IAU_ETH-USD.pkl  IVV_BTC-USD.pkl  IVV_ETH-USD.pkl  IVV_GLD.pkl  IVV_IAU.pkl  SPY_BTC-USD.pkl  SPY_ETH-USD.pkl  SPY_GLD.pkl  SPY_IAU.pkl  SPY_IVV.pkl
nexus/: CMakeLists.txt
nexus/include/: audit_ledger.h  event.h  ghost_exchange.h  institutional_ops.h  limit_order_book.h  microstructure_sim.h  rl_policy.h  shared_bridge.h  spsc_queue.h
nexus/src/: main.cpp
python/quantcore/: __init__.py  pipeline.py
python/quantcore/alt_data/: satellite.py
python/quantcore/rl/: ghost_gym.py  (+2 more)
python/scripts/: live.py  seed_universe.py  train.py
tests/: test_black_scholes.py  test_broker.py  test_edge_cases.py  test_portfolio.py  test_validation.py
ui_backups/: alpha_hunter.py_20260703_095708.bak  alpha_hunter.py_20260703_100417.bak  backtester.py_20260703_100417.bak  base_20260703_122319.html  base_20260703_141057.html  base_20260703_141512.html  base_20260703_143922.html  base_20260703_145214.html  base_20260703_160931.html  base_20260705_194100.html  main_20260703_085142.py  main_20260703_103013.py  main_20260703_103238.py  main_20260703_115113.py  main_20260703_122319.py  main_20260703_143922.py  main_20260703_145214.py  main_20260704_200758.py  main_20260705_194100.py  paper_ledger_20260703_103942.py  paper_trading_20260703_103942.html  paper_trading_20260703_105031.html  paper_trading_20260703_115113.html  statarb_20260703_085142.html  style_20260703_084613.css
web/backend/: analytics.py  main.py
web/templates/: alpha.html  alpha_decay.html  alt_data.html  backtest.html  base.html  cio.html  dashboard.html  day_trading.html  execution.html  hivemind.html  macro.html  nexus.html  ops.html  paper_trading.html  predictions.html  research.html  rl_lab.html  signals.html  sim_lab.html  statarb.html  time_machine.html  trends.html  volatility.html
(+28 files in other folders)
